--- a/roles/mysql-server/handlers/main.yml
+++ b/roles/mysql-server/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 # handlers file for mysql-server
-- name: "restart mysql-server"
+- name: "Restart mysql"
   ansible.builtin.service:
     name: "mysql-server"
     state: "restarted"
