--- a/site.yml
+++ b/site.yml
@@ -8,6 +8,8 @@
       vars:
         ssh_kerberos_supprt: no
         ssh_listen_to: "{{ common__ip_addresses | ansible.netcommon.ipaddr('address') }}"
+      when:
+        - ansible_version.full is version("2.9.10", ">=")
 - import_playbook: "docker-ssd-host.yml"
 - import_playbook: "dns.yml"
 - import_playbook: "loki.hogs.tswn.us.yml"
