--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -134,6 +134,9 @@ bind_zones:
       - name: "docker-vm.hogs"
         ip: "10.10.0.6"
         ipv6: "fd36:3eb3:43b0:a::6"
+      - name: "docker-vm-public.hogs"
+        ip: "10.10.0.7"
+        ipv6: "fd36:3eb3:43b0:a::7"
       - name: "ipmi.firstlightweaveslivingsong.hogs"
         ip: "10.10.0.10"
         ipv6: "fd36:3eb3:43b0:a::a"
