--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -44,6 +44,7 @@
   notify: "restart networking interfaces"
   tags:
     - "networking"
+  when: item.name in ansible_interfaces
 - name: "Setup /etc/network/interfaces"
   ansible.builtin.template:
     dest: "/etc/network/interfaces"
