add some better defaults

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
 INTERPRETER_PYTHON=auto
+inventory=prod-inventory
+remote_user=ansible
 VAULT_PASSWORD_FILE=.ansible_vault_password
 
 [persistent_connection]
