Move zwavejs2mqtt to docker-zwavejs2mqtt

--- a/loki.hogs.tswn.us.yml
+++ b/loki.hogs.tswn.us.yml
@@ -2,7 +2,7 @@
 - hosts: "loki"
   become: yes
   roles:
-    - role: "zwavejs2mqtt"
+    - role: "docker-zwavejs2mqtt"
       tags:
         - "docker"
         - "zwavejs2mqtt"
