--- a/roles/docker-zwavejs2mqtt/tasks/main.yml
+++ b/roles/docker-zwavejs2mqtt/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for zwavejs2mqtt
+# tasks file for docker-zwavejs2mqtt
 
 - name: "Create zwavejs2mqtt group"
   ansible.builtin.group:
