--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 INTERPRETER_PYTHON=auto
 inventory=prod-inventory
 remote_user=ansible
+roles_path=roles:~/.ansible/roles
 VAULT_PASSWORD_FILE=.ansible_vault_password
 
 [persistent_connection]
