--- a/site.yml
+++ b/site.yml
@@ -10,9 +10,9 @@
         ssh_listen_to: "{{ common__ip_addresses | ansible.netcommon.ipaddr('address') }}"
       when:
         - ansible_version.full is version("2.9.10", ">=")
-- import_playbook: "docker-ssd-host.yml"
-- import_playbook: "docker-vm-public-host.yml"
-- import_playbook: "dns.yml"
-- import_playbook: "loki.hogs.tswn.us.yml"
-- import_playbook: "mysql.yml"
-- import_playbook: "opensprinkler.yml"
+- import_playbook: "plays/groups/dns.yml"
+- import_playbook: "plays/hosts/docker-ssd.hogs.tswn.us.yml"
+- import_playbook: "plays/hosts/docker-vm-public.hogs.tswn.us.yml"
+- import_playbook: "plays/hosts/harvest.hogs.tswn.us.yml"
+- import_playbook: "plays/hosts/loki.hogs.tswn.us.yml"
+- import_playbook: "plays/hosts/mysql.hogs.tswn.us.yml"
