--- a/site.yml
+++ b/site.yml
@@ -13,6 +13,7 @@
 - import_playbook: "plays/groups/dns.yml"
 - import_playbook: "plays/hosts/docker-ssd.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/docker-vm-public.hogs.tswn.us.yml"
+- import_playbook: "plays/hosts/docker-vm.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/harvest.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/loki.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/mysql.hogs.tswn.us.yml"
