change how inventory is grouped, and make host plays point to a specific host

--- a/plays/hosts/docker-vm-public.hogs.tswn.us.yml
+++ b/plays/hosts/docker-vm-public.hogs.tswn.us.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: "docker_vm_public"
+- hosts: "docker-vm-public.hogs.tswn.us"
   become: yes
   roles:
     - role: "docker-unifi-controller"
