add GEM dashbox to dns

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
+COLLECTIONS_PATHS=~/ansible-collection-dev:~/.ansible/collections:/usr/share/ansible/collections
 INTERPRETER_PYTHON=auto
 inventory=prod-inventory
 remote_user=ansible
