--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -82,6 +82,9 @@ bind_zones:
       - name: "loki.hogs"
         ip: "10.117.0.23"
         ipv6: "fd36:3eb3:43b0:75::17"
+      - name: "monitor.house.gem.hogs"
+        ip: "10.117.0.24"
+        ipv6: "fd36:3eb3:43b0:75::18"
       - name: "enduringbias.hogs"
         ip: "10.117.0.26"
         ipv6: "fd36:3eb3:43b0:75::1a"
