--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -103,6 +103,9 @@ bind_zones:
           - "factorio"
           - "valheim"
           - "valheim.hogs"
+      - name: "deepstack.hogs"
+        ip: "10.117.0.32"
+        ipv6: "fd36:3eb3:43b0:75::20"
       - name: "zabbix.hogs"
         ip: "10.117.0.33"
         ipv6: "fd36:3eb3:43b0:75::21"
