--- a/roles/vyos-firewall/zones/home/from-man-ipv4.yml
+++ b/roles/vyos-firewall/zones/home/from-man-ipv4.yml
@@ -51,3 +51,14 @@
     group:
       address_group: "FILE-SERVER-v4"
       port_group: "NFS"
+- description: "Allow Samba connections to Home Assistant"
+  action: "accept"
+  protocol: "tcp"
+  state:
+    new: true
+  destination:
+    group:
+      port_group: "CIFS"
+  source:
+    group:
+      address_group: "HASS-CIFS-from-MAN-v4"
