--- a/vyos.yml
+++ b/vyos.yml
@@ -354,6 +354,12 @@
           config_trap: no
           group:
             address_group:
+              - name: "CAMERAS-v4"
+                description: "The v4 IP camera addresses"
+                afi: "ipv4"
+                members:
+                  - address: "10.67.0.10"
+                  - address: "10.67.0.11"
               - name: "HASS-CIFS-from-MAN-v4"
                 description: "IP Addresses from MAN that can talk to HASS Samba Server ({{ ansible_managed }})"
                 afi: "ipv4"
@@ -414,8 +420,6 @@
                   - address: "10.117.0.27"
                   # sdwilsh-desktop
                   - address: "10.117.0.31"
-                  # viseron
-                  - address: "10.117.0.29"
               - name: "NOWAN-TALKERS-from-HOME-v6"
                 description: "IP Addresses allowed to talk to devices on NOWAN and IOT ({{ ansible_managed }})"
                 afi: "ipv6"
@@ -451,6 +455,11 @@
                 members:
                   - address: "fd36:3eb3:43b0:a::{{ vyos__peer_host_id_ipv6 }}"
                   - address: "fd36:3eb3:43b0:75::{{ vyos__peer_host_id_ipv6 }}"
+              - name: "VISERON-v4"
+                description: "The v4 viseron.hogs.tswn.us addresses"
+                afi: "ipv4"
+                members:
+                  - address: "10.117.0.29"
               - name: "ZABBIX-SERVER-v4"
                 description: "The v4 server.zabbix.hogs.tswn.us addresses"
                 afi: "ipv4"
