Add energy monitor

--- a/site.yml
+++ b/site.yml
@@ -16,4 +16,5 @@
 - import_playbook: "plays/hosts/docker-vm.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/harvest.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/loki.hogs.tswn.us.yml"
+- import_playbook: "plays/hosts/monitor.house.gem.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/mysql.hogs.tswn.us.yml"
