--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -173,6 +173,8 @@ bind_zones:
       - name: "power-failover.hogs"
         ip: "10.10.0.32"
         ipv6: "fd36:3eb3:43b0:a::21"
+      - name: "infra1.os.hogs"
+        ip: "10.10.0.60"
 
       # Services Networks
       - name: "installation02"
