do not try to remove ubuntu user when that is the user we are using

--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -134,4 +134,4 @@
     name: ubuntu
     state: absent
     remove: yes
-  when: ansible_distribution == "Ubuntu"
+  when: ansible_user == "ubuntu"
