--- a/roles/common/tasks/zabbix-agent/main.yml
+++ b/roles/common/tasks/zabbix-agent/main.yml
@@ -4,7 +4,9 @@
   when: "ansible_distribution == 'FreeBSD'"
 - name: "Install Zabbix Repository"
   ansible.builtin.apt:
-    deb: "https://repo.zabbix.com/zabbix/5.4/ubuntu/pool/main/z/zabbix-release/zabbix-release_5.4-1+ubuntu{{ ansible_lsb.release }}_all.deb"
+    # Ideally, we would use the ansible_lsb.release here, however Zabbix only supports LTS
+    # releases, so we just use the previous package that is available (20.04).
+    deb: "https://repo.zabbix.com/zabbix/5.4/ubuntu/pool/main/z/zabbix-release/zabbix-release_5.4-1+ubuntu20.04_all.deb"
   tags:
     - "zabbix-agent"
   when: "ansible_distribution == 'Ubuntu'"
