--- a/roles/common-rpi/tasks/main.yml
+++ b/roles/common-rpi/tasks/main.yml
@@ -17,3 +17,8 @@
     owner: "root"
     src: "config.txt.j2"
   notify: "reboot"
+
+- name: "Install linux-modules-extra-raspi"
+  ansible.builtin.apt:
+    name: "linux-modules-extra-raspi"
+    state: "present"
